# ml-patient-classifier

./: .gitignore  README.md  pyproject.toml
configs/: base.yaml
data/: sample_patient.json
notebooks/: analysis.ipynb
reports/: model_comparison.csv  model_comparison.md  threshold_comparison.csv  threshold_comparison.md
src/ml_patient_classifier/: compare_models.py  config.py  data.py  evaluate.py  modeling.py  predict.py  preprocessing.py  threshold_analysis.py  thresholds.py  train.py  tuning.py
tests/: test_data.py
