[project]
name = "ml-patient-classifier"
version = "0.1.0"
requires-python = ">=3.10"

dependencies = [
  "numpy",
  "pandas",
  "scikit-learn",
  "pyyaml",
  "joblib",
  "matplotlib",
  "seaborn",
  "tabulate"
]

[project.optional-dependencies]
dev = [
  "pytest",
  "ruff"
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]